# chatspace

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  env.example
.claude/: CLAUDE.md  settings.json  settings.local.json.example
architecture/: design-tokens.md
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_admin_bootstrap_flags.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  channels.py  health.py  invites.py  me.py  media.py  messages.py  metrics.py  password.py  router.py  sessions.py  users.py
backend/app/core/: body_limit.py  client_ip.py  config.py  correlation.py  deps.py  email_validation.py  error_monitor.py  errors.py  ids.py  jwt.py  logging.py  media_validation.py  metrics.py  middleware.py  pagination.py  password_policy.py  rate_limit.py  rate_limit_deps.py  redact.py  redis_fail_modes.py  redis_keys.py  request_body.py  security.py  token_hash.py
backend/app/db/: base.py  engine.py  redis.py  session.py  storage.py
backend/app/jobs/: __init__.py  media_orphan_sweep.py
backend/app/models/: __init__.py  attachment.py  channel.py  channel_member.py  invite.py  message.py  password_reset_token.py  session.py  user.py
backend/app/schemas/: admin.py  auth.py  auth_password.py  auth_register.py  channels.py  invites.py  media.py  messages.py  sessions.py  user.py  user_search.py  users.py
backend/app/services/: admin_users.py  auth.py  bootstrap.py  channel_events.py  channels.py  email.py  invites.py  media.py  media_images.py  media_storage.py  media_sweep.py  message_events.py  messages.py  password_reset.py  presence.py  profile.py  readiness.py  registration.py  session_revocation.py  sessions.py  user_search.py
backend/app/ws/: __init__.py  auth.py  close_codes.py  connection_manager.py  conversations.py  fanout.py  frames.py  rate_limit.py  router.py  typing_events.py
backend/tests/: conftest.py  test_admin_api.py  test_auth_endpoints.py  test_auth_service.py  test_body_limit.py  test_bootstrap.py  test_channel_events.py  test_channels_api.py  test_channels_membership_api.py  test_config.py  test_correlation.py  test_db.py  test_deps_auth.py  test_dms_api.py  test_email.py  test_error_monitor.py  test_errors.py  test_errors_unhandled.py  test_health.py  test_ids.py  test_invites_api.py  test_jwt.py  test_logging_redaction.py  test_me_endpoint.py  test_media_api.py  test_media_images.py  test_media_sweep.py  test_media_validation.py  test_message_events.py  test_messages_api.py  test_messages_persist_then_publish.py  test_metrics.py  test_metrics_api.py  test_migrations.py  test_pagination.py  test_password_api.py  test_password_policy.py  test_presence_service.py  test_profile_service.py  test_rate_limit.py  (+14 more)
frontend/: .dockerignore  Dockerfile  README.md  env.example  index.html  package-lock.json  package.json  vite.config.ts
playbooks/: bug-fix.md  feature-development.md  hotfix.md  incident-response.md  migration.md  release.md  tech-debt.md
prompts/: README.md  architecture.md  bugfix.md  deployment.md  documentation.md  implementation.md  initiate-workflow.md  performance.md  planning.md  refactoring.md  review.md  security.md  testing.md
templates/: adr.md  api-contract.md  database-design.md  functional-spec.md  postmortem.md  prd.md  test-plan.md  (+3 more)
(+252 files in other folders)
