[project]
name = "chatspace-backend"
version = "0.1.0"
description = "chatspace v1 backend — FastAPI modular monolith"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "alembic>=1.14.0",
    "uuid6>=2024.7.10",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # passlib 1.7.4's bcrypt backend probes `bcrypt.__about__.__version__` to
    # detect the installed bcrypt version; that attribute was removed in
    # bcrypt 4.1, which breaks `CryptContext(schemes=["bcrypt"])` entirely
    # (AttributeError at hash/verify time, not just a warning). Pin below
    # that break until passlib ships a compatible release.
    "bcrypt<4.1.0",
    "boto3>=1.35.0",
    "aiosmtplib>=3.0.2",
    # T28 media pipeline: EXIF-strip-or-reject for images (ADR-0007 names
    # Pillow explicitly as the mechanism) and multipart/form-data parsing
    # for `POST /v1/media` (FastAPI's sole supported multipart backend --
    # not a discretionary alternative; the frozen contract mandates
    # multipart/form-data for this endpoint).
    "Pillow>=10.4.0",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
